--- a/sistema-web/src/main/webapp/index.html
+++ b/sistema-web/src/main/webapp/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
 <html>
 <head>
-    <title>Hello Ext</title>
+    <title>Sistema ExtJS4</title>
 
     <link rel="stylesheet" type="text/css" href="extjs4/resources/css/ext-all.css"/>
     <script type="text/javascript" src="extjs4/ext-debug.js"></script>
